[package]
name = "fc-tools-flags"
authors = ["hydrostaticcog <hydro@hydrostaticcog.me>"]
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Developer tools for FerrisChat (flag parser)"
homepage = "https://ferris.chat"
documentation = "https://docs.rs/fc-tools-flags"
repository = "https://github.com/hydrostaticcog/FC-Flag-Parser"
readme = "README.md"
include = [
    "**/*.rs",
    "Cargo.toml",
    "/.gitignore",
    "/LICENSE",
    "/README.md"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ferrischat_common = { git = "https://github.com/FerrisChat/Common.git", version = "0.2", branch = "master" }
